--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
+    "express": "^4.18.1",
     "i18next": "^21.8.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,8 +19,9 @@
     "react-spring": "^9.4.5",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
