updated info, looks, and bugfixing

--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.4.5",
+    "react-toastify": "^9.0.7",
+    "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
-
   "scripts": {
     "start": "node server/server.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react": "react-scripts start",
+    "dev": "nodemon src/index.js",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
